@@ -4,10 +4,11 @@ plugins {
     id "org.springframework.boot" version "2.7.18"
     id 'maven-publish'
     id 'signing'
+    id "com.github.jruby-gradle.base" version "2.1.0-alpha.2"
 }
 
 group 'no.datek'
-version '0.19.0'
+version '0.19.1'
 final String JRUBY_VERSION = '9.4.6.0';
 
 repositories {
@@ -90,3 +91,44 @@ publishing {
         }
     }
 }
+
+import com.github.jrubygradle.JRubyExec
+
+tasks.register('installGems', JRubyExec) {
+    group 'gems'
+    description "Install gems"
+    script "${projectDir}/bin/bundle"
+    scriptArgs 'install'
+    finalizedBy 'copyGems'
+    jvmArgs '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED', '--add-opens=java.base/java.io=ALL-UNNAMED'
+}
+
+tasks.register('updateGems', JRubyExec) {
+    group 'gems'
+    description "Update gems"
+    script "${projectDir}/bin/bundle"
+    scriptArgs 'update'
+    finalizedBy 'cleanGems', 'copyGems'
+    jvmArgs '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED', '--add-opens=java.base/java.io=ALL-UNNAMED'
+}
+
+tasks.register('cleanGems', JRubyExec) {
+    group 'gems'
+    description "Clean gems"
+    script "${projectDir}/bin/bundle"
+    scriptArgs 'clean', '--force'
+    jvmArgs '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED', '--add-opens=java.base/java.io=ALL-UNNAMED'
+}
+
+tasks.register('copyGems', Sync) {
+    group 'gems'
+    description 'Copies gems from vendor/bundle to src/main/resources/gems'
+    mustRunAfter 'cleanGems'
+    from "build/.gems/gems"
+    include "*/lib/**/*"
+    includeEmptyDirs = false
+    into("src/main/resources/gems")
+    eachFile { fcd -> fcd.relativePath = new RelativePath(true, fcd.relativePath.segments.drop(2)) }
+}
+
+jruby { jrubyVersion JRUBY_VERSION }
